added mongodb and mongoose to proyect, implemented connection and model, dockerization of mongodb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,12 @@ services:
     command: npm start
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - 5001:8080
+    depends_on:
+      - mongo
+  mongo:
+    image: mongo
+    ports:
+      - 27017:27017
