--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
